segundo commit ui

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".login">
-
+    tools:context=".reset_password">
 
     <ImageView
         android:id="@+id/imageViewfondo"
@@ -14,8 +13,10 @@
         android:background="@drawable/fondo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="parent" />
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/imageViewbanner"
@@ -56,64 +57,53 @@
 
 
     <EditText
-        android:id="@+id/editTextusername"
+        android:id="@+id/editTextresetpassword"
         android:layout_width="347dp"
         android:layout_height="51dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
+        android:hint="Email"
         android:inputType="text"
-        android:hint="Username or email"
+        app:layout_constraintStart_toStartOf="@+id/textViewwords"
+        app:layout_constraintTop_toBottomOf="@+id/textViewwords" />
+
+    <TextView
+        android:id="@+id/textViewwords"
+        android:layout_width="379dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="20dp"
+        android:text="Introduce tu direccion de correo electronico y te enviaremos un enlace para restablecer tu contraseña"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.359"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textViewrecuperacion"
+        app:layout_constraintTop_toBottomOf="@+id/textViewrecuperacion" />
+
+    <TextView
+        android:id="@+id/textViewrecuperacion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/smile"
+        android:text="Restablecer contraseña"
+        android:textColor="@color/white"
+        android:textSize="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewbanner" />
 
-    <EditText
-        android:id="@+id/editTextpassword"
-        android:layout_width="350dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:hint="Password"
-        app:layout_constraintStart_toStartOf="@+id/editTextusername"
-        app:layout_constraintTop_toBottomOf="@+id/editTextusername" />
-
     <Button
-        android:id="@+id/buttonpasswordfailed"
+        android:id="@+id/buttonrestablecer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="80dp"
         android:fontFamily="@font/lose"
-        android:text="Olvidaste la contraseña"
-        android:textColor="#00b0ff"
-        android:textColorHighlight="#FFC107"
-        android:textColorLink="#CDDC39"
+        android:text="Restablecer contraseña"
         android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="@+id/editTextpassword"
-        app:layout_constraintTop_toBottomOf="@+id/editTextpassword" />
-
-    <Button
-        android:id="@+id/buttonstart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:text="Empezamos"
-        android:textColorHighlight="#FFC107"
-        android:textColorLink="#CDDC39"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/editTextpassword"
-        app:layout_constraintStart_toEndOf="@+id/buttonpasswordfailed"
-        app:layout_constraintTop_toTopOf="@+id/buttonpasswordfailed" />
-
-    <Button
-        android:id="@+id/buttoncontinue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
-        android:text="Continuar sin registrarse"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonpasswordfailed" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextresetpassword" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
